--- a/benchmarks/AdaptiveSDE/Project.toml
+++ b/benchmarks/AdaptiveSDE/Project.toml
@@ -9,7 +9,7 @@ SciMLBenchmarks = "31c91b34-3c75-11e9-0341-95557aab0344"
 StochasticDiffEq = "789caeaf-c7a9-5a7d-9973-96adeb23e2a0"
 
 [compat]
-DiffEqNoiseProcess = "4.3, 5.0"
+DiffEqNoiseProcess = "5.0"
 DiffEqProblemLibrary = "4.8"
 ParallelDataTransfer = "0.5"
 Plots = "1.4"
